<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/corner_radius">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp">

        <ImageView
            android:id="@+id/favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/copy"
            android:background="@drawable/ripple"
            android:contentDescription="@string/favorite"
            android:padding="8dp"
            android:src="@drawable/ic_favorite_border_black_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nickname"
            style="@style/AppTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?android:textColorPrimary"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@id/options"
            app:layout_constraintStart_toEndOf="@id/favorite"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="nickname" />

        <ImageView
            android:id="@+id/options"
            style="@style/AppTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple"
            android:contentDescription="@string/options"
            android:padding="8dp"
            android:src="@drawable/ic_more_vert_black_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple"
            android:contentDescription="@string/copy_password"
            android:padding="8dp"
            android:src="@drawable/ic_content_copy_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/person_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/nickname"
            android:background="@drawable/ripple"
            android:contentDescription="@string/username_icon"
            android:padding="8dp"
            android:src="@drawable/ic_person_black_24dp"
            app:layout_constraintEnd_toStartOf="@id/username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/favorite" />

        <TextView
            android:id="@+id/username"
            style="@style/AppTheme"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@+id/nickname"
            android:layout_toEndOf="@id/person_icon"
            android:padding="8dp"
            android:textIsSelectable="true"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/person_icon"
            app:layout_constraintTop_toBottomOf="@id/favorite"
            tools:text="username" />

        <ImageView
            android:id="@+id/password_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/person_icon"
            android:background="@drawable/ripple"
            android:contentDescription="@string/password_icon"
            android:padding="8dp"
            android:src="@drawable/ic_remove_red_eye_black_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/person_icon" />

        <TextView
            android:id="@+id/password"
            style="@style/AppTheme"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@+id/username"
            android:layout_toEndOf="@id/password_icon"
            android:padding="8dp"
            android:textIsSelectable="true"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/password_icon"
            app:layout_constraintTop_toBottomOf="@id/person_icon"
            tools:text="password" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>